[ruby/prism] No writing to numbered parameters

Fixes [Bug #21117]

https://github.com/ruby/prism/commit/19d4bab5a0